[package]
name = "ensorf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "form"] }
axum_sessions = "0.5.0"
axum-template = { version = "1.0.0", features = ["minijinja"] }
tokio = { version = "1.32.0", features = ["full"] } 
serde = { version = "1.0", features = ["derive"] }
